chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* use this for help with css grid stuff: https://www.youtube.com/watch?v=uuOXPWCh-6o */


/* _______________________________________________________________________________________________________________________________________ */
/* For Most, If not All pages */
:root{
    --background-color: #32343e; 
    --primary-color:white;;
    --grey-blue:#404c54;
    --blue-enough:#446b6a;
    --almost-teal:#478d73;
    --sea-green:#5ba95d;
    --text-color:black;
}

* {
    font-family: 'Roboto';
    box-sizing: border-box;  
}

::selection {
    color: var(--text-color);
    background-color: var(--background-color);
} 

header{
    background-color:var(--primary-color);
    display:grid;
    grid-column:2/4 ;
    text-align:center;
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;    
    background-color: var(--primary-color);
    max-width: 800px; 
    margin: 75px auto;
    
}

.grid-item {
    padding: 20px;
}

main ul{
    list-style-type: none;   
}

                                        /*  ALL Navigation */
nav{
    background-color: var(--background-color);
    color: var(--text-color);
    grid-column:span;
    text-align: center;
    /* border-style: var(--primary-color); */
}

nav ul{ 
    list-style:none;
    text-align: center;
    background-color: var(--blue-enough);
    padding-inline-start: 0px; /*what does this do?*/
    display:none; 
    font-size:20px;
}

nav ul.open{
    display:flex;
    flex-direction:column;
    justify-content: space-around;

}

nav ul li{
    width:100%;
}

nav ul li a{
    display:block;
    text-decoration:none;
    color:var(--text-color);
    padding: 1rem;
}
nav a{
    color: var(--text-color);
    text-align: center;
    font-size: large;
    
}
nav ul li a:hover{
    color:var(--primary-color);
    background-color: var(--almost-teal);
    font-weight: bold; 
    
}
 nav li{    

    list-style-type: none;     /*this makes the dots besides the link disapear  */
}

     /*[Stuff within body] */
body {
    font-size:20px;
    color:var(--text-color);
    background-color: var(--primary-color);
}
h1{
    color:var(--text-color);
}

    /*__________ Card Stuff___________  */
section {
    font-size: 25px;
    border-style: solid;
    border-width: 3.8px; 
    border-radius: .4rem; 
    /* width: 98%; --> this made the cards stack besides each other */
    padding: 35px;
    margin: 1rem;  
}

section a:hover{
    color:var(--text-color); 
}

#cards section{
    max-width: fit-content;
    margin: .6rem;
    padding: 35px;
    border-style: solid; 
    border-width: 3.8px; 
    border-radius: 5rem; 
}

#cards{
    display: grid;
    color: var(--text-color);
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
}

/*#cards section{
     max-width: fit-content;
    margin: .6rem;
    padding: 35px;
    border-style: solid; 
    border-width: 3.8px; 
    border-radius: 5rem;  
}*/

#weather_main{
    display: grid;
    grid-template-columns: auto;
    text-align: center;
    background-color: var(--grey-blue);
}

/* _______ Google Maps_________  */
 .google-maps{
    position:relative;  
    /* padding-bottom: 50px; */
    padding:1rem;
    width: 100%;
}

/* __________Footer__________ */

footer{
    background-color:var(--background-color);
    padding: 45px;
    font-size:15px;
    color: var(--primary-color);
    text-align: center;   
}
footer li{
    list-style:none;
}
footer a{
    color:var(--sea-green);
}
footer a:hover{
    color:var(--almost-teal)
}

/*______________Buttons___________*/
                                                
        /*navigation button */
#menu-button{
    background-color:var(--sea-green);
    font-size: 2rem;
    padding:.5rem;
}

#menu-button::before{ 
    content: "☰";   /* supposed to use "&equiv;" in html to get the proper hamburger sign, but can't figure out how to utilize it */

}
    /*nav when it's closed  */
#menu-button.open::before{
    content: 'x';
}
    /* dark mode button */
#dark-mode{
    /* background-color: var(--grey-blue); */
    height: 2rem;
    position: absolute;
    top: 1rem;
    right: 1rem;
}

#dark-mode::before{
    content: "Dark";
    background-color:var(--text-color);
    color:var(--primary-color)
}

#dark-mode.dark::before{
    content: "Light"; 
}
/* _____________________________________________________________________________________________________________ */
            /* week 6 project */
.picture{
   width:10%;
   position:relative;    
}

#hero_label::after{
    content: "small";
}

#hero_label{
    position: absolute;
    background-color: var(--sea-green);
    top: 0px;
    left: 50px;
}

/* ________________________________________________________________IMAGES________________________________________________________________________ */
                                      /* ALL IMAGES HERE  */
header img{               
   /* display:grid;
    grid-column: 1/4; */
    border-radius:100px;  /* this changes the shape of the image*/
    padding: 20px;       /*  gives spacing but shortens image */
    width:175px;        /*changes width of image             */
    justify-content: left;
}

.pocatello_img{
    width:100%;
}

.logo_img{
    padding: 15px;         /*gives spacing but shortens image */
    width:30px;          /*changes width of image   */      
}

footer img{                   /*This is supposed to work with the logo and any other images in the footer ONLY*/
    float:left;               
    border-radius:100px;      
    padding: 15px;     /* gives spacing but shortens image  */
    width:150px;           
}
 /* an image in the discover.html page */
.discover-images img{     
    border: 5px solid var(--almost-teal);
    transition: opacity 2s;
} 
  /* _________________________________________________________________END images________________________________________________________________  */
 /*_____________________________________________________________________________________________________________________________________________ */
                        /* DISCOVER Page (discover.html)*/
.discover {
    text-align: right;
    font-size:2rem;
    padding-bottom: 35rem ;
}

/* ___________________________________________________________________________________________________________________________________________ */

                                                /* Business page (directory.html) */
        /* stuff for after Grid */
        /* TO DO:  figure out why grid and list isn't working */
#members_main{
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
    margin: 1rem auto;
    padding:2rem;
    text-align: center;
   
}
       
.members_cards{
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    justify-items: center;
}

#members_cards section {
    text-align: center;
    border-style: solid;
    border-width: 3px;
    border-radius: 5rem;
    padding: 1rem; 
    margin: .5rem;
    box-shadow: .5rem .5rem .5rem var(--almost-teal);
}

.members_cards button{
    padding: 2rem;
    font-weight: 300;
    background-color: var(--background-color);
     color: var(--almost-teal) /*was previously set to "#478d73"*/
}

.members_cards button:hover{
    background-color: var(--sea-green);
    color: var(--grey-blue);
}
    /* List section in directory  */
.members_list section{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    width:40%;
    padding-left: 1rem ;
    padding-right: 1rem;
    /* text-align: center; */
} 
/* This didn't go in IMage section of base because there is no image to display */
.members_list section img{
    display: none;
}

.members_list section:nth-child(even){
    background-color: var(--grey-blue);
}
.members_list section:nth-child(odd){
    background-color: var(--sea-green);
}
                                                  /* END FOR BUSINESS PAGE (directory.html) */
/* _________________________________________________________________________________________________________________________________________ */
                                         
                                                                 /* /*  FORM CSS    */

.join{
    display: grid;    
    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
}

.join > div{
    margin: 5rem;
    padding: 1rem;
    border: 1px var(--text-color) solid;
    border-radius: 5px;  
    width: 90%;
    min-width: 400px;
}

label.myinput{
    display:block;
    padding-top: 1rem;
}

label.myinput input, label.myinput textarea{
    display:block;
    font-size: 1.2rem;
    padding: .5rem;
    width: 20rem;
    max-width: 20rem;
}

label.myradio{
    display: block;
    margin-right: .2rem;
    font-size: 1.3rem;  
    padding-top: .5rem; 
}

label.myradio input{
  margin-right: 1rem;
}

.mysubmit{
    background-color: var(--blue-enough);
    color: var(--text-color);
    margin: 1rem 0 0 0;
    padding: .5rem;
    font-size: 1.5rem;
}

label.myinput input:required{
    border-color: var(--sea-green);
}

input:valid{
    background-color:var(--grey-blue);
}

input:invalid{
    background-color: var(--grey-blue);
}

.join-confirm{
    display: grid;
    grid-template-columns: 1fr 1fr;
    text-align: center;
}

#thankyou-main h2{
    text-align: center;
    margin-block-start: 0;
    margin-block-end: 0;
    padding: 1rem 0;
}

                                                       /* End of Form (join.html) */
/* __________________________________________________________________________________________________________________________________________ */

